--- a/28.css
+++ b/28.css
@@ -52,3 +52,80 @@ body{
 .container-navegacao a:hover{
     color: #ffffff;
 }
+
+/*---------------------------*/
+
+.container-quem-somos{
+    background-color: #05192a;
+    overflow: auto;
+
+}
+
+.container-quem-somos .servico{
+    float: center;
+    margin: 60px auto;
+    background-color: #061f35;
+    width: 50%;
+    padding: 50px;
+    border-radius: 10px;
+    text-align: center;
+
+}    
+
+.container-quem-somos .servico .icone{
+    margin-bottom: 10px;
+    
+}    
+
+.container-quem-somos .servico-texto{
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 20px;
+    font-size: 1.2em;
+    color: #81c4ff;
+    
+}    
+
+.container-quem-somos .servico-texto-realce{
+    color: white;
+    font-weight: bold;
+    
+}    
+
+/*---------------------------*/
+
+footer{
+    text-align: center;
+    padding: 80px;
+    background-color: #02111f;
+    color: gray;
+}
+
+/*---------------------------*/
+
+.container-servico-cantactos{
+    background-color: #082946;
+    padding: 80px;
+    text-align: center;
+}
+
+.container-servico-cantactos .botoes-servico-contactos{
+    padding: 60px;
+    text-align: center;
+}
+
+.botoes-servico-contactos a{
+    display: block;
+    max-width: 200px;
+    text-decoration: none;
+    font-size: 1.2em;
+    background-color: #008eb9;
+    color: white;
+    padding: 20px 60px;
+    margin: 10px auto;
+    border-radius: 10px;
+}
+
+.botoes-servico-contactos a:hover{
+    background-color: white;
+    color: black;
+}
