--- a/TUDO/renatooffice/html/css/vars.css
+++ b/TUDO/renatooffice/html/css/vars.css
@@ -1,7 +1,7 @@
 :root {
 	--white-color: #fff;
 	--gray-color: #aeb4a6;
-	--green-color: #94de1d;
+	--green-color: #0f4f53;
 	--index: calc(1vw + 1vh);
 	--transition: ease-in-out;
 }
