--- a/TUDO/renatooffice/html/css/vars.css
+++ b/TUDO/renatooffice/html/css/vars.css
@@ -3,5 +3,5 @@
 	--gray-color: #aeb4a6;
 	--green-color: #0f4f53;
 	--index: calc(1vw + 1vh);
-	--transition: ease-in-out;
+	--transition: var(--index);
 }
